--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>LEDP</title>
     <link rel="stylesheet" href="assets/css/all.css">
     <link rel="stylesheet" href="style.css">
