--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>LEDP</title>
     <link rel="stylesheet" href="assets/css/all.css">
     <link rel="stylesheet" href="style.css">
@@ -48,14 +48,14 @@
         <div class="notice">
             <div class="notice-content">
                 <div class="container">
-                <div class="notice-left">
-                    <img src="assets/images/announcement.png" alt="">
+                    <div class="notice-left">
+                        <img src="assets/images/announcement.png" alt="">
+                    </div>
+                    <div class="notice-right">
+                        <h2>নোটিশ</h2>
+                        <a href="#"><i class="fas fa-file-alt"></i>রেজিষ্ট্রেশন সংক্রান্ত জরুরী নোটিশ</a>
+                    </div>
                 </div>
-                <div class="notice-right">
-                    <h2>নোটিশ</h2>
-                    <a href="#"><i class="fas fa-file-alt"></i>রেজিষ্ট্রেশন সংক্রান্ত জরুরী নোটিশ</a>
-                </div>
-            </div>
             </div>
         </div>
     </section>
@@ -252,6 +252,7 @@
                     <h4>রাজন সরকার</h4>
                     <p>বাংলাদেশ সরকার কর্তৃক গৃহীত লার্নিং এন্ড আর্নিং ডেভেলপমেন্ট প্রকল্প একটি উপযোগী উদ্যোগ। ৬ মাসের এই ট্রেইনিং প্রোগ্রাম করে আমিও স্বাবলম্বী হতে পেরেছি। আমি উক্ত প্রশিক্ষণ প্রকল্পের সফলতা কামনা করি। </p>
                 </div>
+
                 <div class="motamot-3">
                     <img src="assets/images/faysal.jpg" alt="">
                     <h4>ফয়সাল হাসান</h4>
@@ -326,7 +327,8 @@
             <div class="container">
                 <h2>যোগাযোগ</h2>
                 <hr>
-                <div class="communication-left">
+               <div class="communication-content">
+                    <div class="communication-left">
                     <div class="address">
                         <h4>ঠিকানা:</h4>
                         <p>ই-১৪/এক্স, আইসিটি টাওয়ার, আগারগাঁওশেরে-বাংলানগর, ঢাকা-১২০৭</p>
@@ -337,7 +339,10 @@
                     </div>
 
                 </div>
-                <div class="communication-right"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7302.245042731394!2d90.37442!3d23.778651!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x12bf528f77a8dc21!2sICT%20Division%2C%20Agargaon%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1599346269220!5m2!1sen!2sbd" width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+                <div class="communication-right">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7302.245042731394!2d90.37442!3d23.778651!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x12bf528f77a8dc21!2sICT%20Division%2C%20Agargaon%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1599346269220!5m2!1sen!2sbd" width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
+               </div>
             </div>
         </div>
     </section>
